syntax = "proto3";

package proto;
option go_package = "grpc/proto";




// Define the request and response message types
message vacancyStruct {
    int32 ID = 1;
    string vacName = 2;
    string keySkills = 3;
	string vacDesc = 4;
	int32 salary = 5;   
	int32 jobCode =6;   
    string jobType =7;   
}

message ReadRequest {
    string readQuery = 1;
}


message ReadResponse {
    repeated vacancyStruct readResult = 1;
}

message InsertRequest {
vacancyStruct newVac =1;
}

message InsertResponse {
    // The error message if there's any
    string insertResult = 1;
}

message DeleteRequest {
    int32 deleteTarget = 1;
}

message DeleteResponse {
    string deleteResult = 1;
}

// Define the gRPC service
service DBServer {
    rpc Read (ReadRequest) returns (ReadResponse);
    rpc Insert (InsertRequest) returns (InsertResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}